<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragment.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center_horizontal"
            android:text="@string/developer_almanac"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:text="@string/user_permissions"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/request_permission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:gravity="left|center_horizontal"
            android:text="@string/request_permissions_for_demand"
            android:textAllCaps="false"
            tools:ignore="RtlHardcoded" />

        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:text="@string/resultados_de_telas"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_for_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/design_default_color_primary"
            android:textColor="@color/white"
            android:gravity="left|center_vertical"
            android:text="@string/requisitando_resultado_de_tela"
            android:textAllCaps="false"
            tools:ignore="RtlHardcoded" />

        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:text="Mostrar ou esconder teclado"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mostar_esconder_teclado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#9B6EDC"
            android:textColor="@color/white"
            android:gravity="left|center_vertical"
            android:text="Mostar ou esconder Teclado"
            android:textAllCaps="false"
            tools:ignore="RtlHardcoded" />


        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:text="Vibrar Celular"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/vibrar_fragment_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#F44336"
            android:textColor="@color/white"
            android:gravity="left|center_vertical"
            android:text="Vibrar Celular"
            android:textAllCaps="false"
            tools:ignore="RtlHardcoded" />

        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:text="Bolquear Captura de Tela"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/block_screen_shots_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#9C27B0"
            android:textColor="@color/white"
            android:gravity="left|center_vertical"
            android:text="Block Screenshots"
            android:textAllCaps="false"
            tools:ignore="RtlHardcoded" />

        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:text="Verificar se tem internet"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/check_intert_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#00BCD4"
            android:textColor="@color/white"
            android:gravity="left|center_vertical"
            android:text="Check Internet"
            android:textAllCaps="false"
            tools:ignore="RtlHardcoded" />

        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:text="Forçar Web View para o modo Dark"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/web_view_dark_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#0C0C0C"
            android:textColor="@color/white"
            android:gravity="left|center_vertical"
            android:text="Web View Dark"
            android:textAllCaps="false"
            tools:ignore="RtlHardcoded" />

        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:text="Verificar editText se tem temanho ou se está vazio"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/check_edit_text_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#FF5722"
            android:textColor="@color/white"
            android:gravity="left|center_vertical"
            android:text="Check Edit Text"
            android:textAllCaps="false"
            tools:ignore="RtlHardcoded" />

        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:text="Verificar se é um emulador ou um device"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/check_emulator_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#03136C"
            android:textColor="@color/white"
            android:gravity="left|center_vertical"
            android:text="Check if is emulator"
            android:textAllCaps="false"
            tools:ignore="RtlHardcoded" />

        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:text="Pegar a ação do botão voltar"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/check_back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#3F2743"
            android:textColor="@color/white"
            android:gravity="left|center_vertical"
            android:text="Take the back action button"
            android:textAllCaps="false"
            tools:ignore="RtlHardcoded" />

        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:text="Biometria"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/check_biometry_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#7A2945"
            android:textColor="@color/white"
            android:gravity="left|center_vertical"
            android:text="Biometria"
            android:textAllCaps="false"
            tools:ignore="RtlHardcoded" />

        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:text="Abrir um Dialog de fullscreen"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fullscreen_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#FF5722"
            android:textColor="@color/white"
            android:gravity="left|center_vertical"
            android:text="Fullscreen"
            android:textAllCaps="false"
            tools:ignore="RtlHardcoded" />

        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:text="Varios tipos de alertas"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/alert_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#282F55"
            android:textColor="@color/white"
            android:gravity="left|center_vertical"
            android:text="Alertas"
            android:textAllCaps="false"
            tools:ignore="RtlHardcoded" />

        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:text="Varias requicição a API"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/polling_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#E3D34E"
            android:textColor="@color/white"
            android:gravity="left|center_vertical"
            android:text="Consultas API"
            android:textAllCaps="false"
            tools:ignore="RtlHardcoded" />

        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:text="BottomSheet com Ticket Selection"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bottom_sheet_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#285C57"
            android:textColor="@color/white"
            android:gravity="left|center_vertical"
            android:text="Bottom Sheet"
            android:textAllCaps="false"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>
</ScrollView>